petal_core/src/snapshots/petal_core__parser__tests__let_declarations-3.snap
---
source: petal_core/src/parser.rs
expression: "parse_stmt(\"let a: Float = b\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    4,
                ),
                end: Some(
                    Pos(
                        4,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "b",
            span: Span {
                start: Pos(
                    15,
                ),
                end: Some(
                    Pos(
                        15,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    2v1,
                ),
            ),
            span: Span {
                start: Pos(
                    15,
                ),
                end: Some(
                    Pos(
                        15,
                    ),
                ),
            },
        },
    ],
    [
        StmtNode {
            stmt: Let(
                LetDecl {
                    ident: IdentId(
                        1v1,
                    ),
                    ty: Some(
                        TypeAnnotation {
                            name: "Float",
                            span: Span {
                                start: Pos(
                                    7,
                                ),
                                end: Some(
                                    Pos(
                                        11,
                                    ),
                                ),
                            },
                        },
                    ),
                    init: ExprId(
                        1v1,
                    ),
                },
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        15,
                    ),
                ),
            },
        },
    ],
    [],
    [],
)
