petal_core/src/snapshots/petal_core__parser__tests__literals-2.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"123.456\")"
---
(
    [],
    [
        ExprNode {
            expr: Float(
                123.456,
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        6,
                    ),
                ),
            },
        },
    ],
)
