petal_core/src/snapshots/petal_core__parser__tests__literals-3.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"\\\"hello\\\"\")"
---
(
    [],
    [
        ExprNode {
            expr: String(
                "hello",
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        6,
                    ),
                ),
            },
        },
    ],
)
