petal_core/src/snapshots/petal_core__parser__tests__unary_binary_prec-2.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"!a ^ b\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        1,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        1,
                    ),
                ),
            },
        },
        ExprNode {
            expr: PrefixOp {
                op: PrefixOp {
                    prefix_type: Not,
                    span: Span {
                        start: Pos(
                            0,
                        ),
                        end: Some(
                            Pos(
                                0,
                            ),
                        ),
                    },
                },
                right: ExprId(
                    1v1,
                ),
            },
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
    ],
)
