petal_core/src/snapshots/petal_core__parser__tests__unary_prec.snap
---
source: petal_core/src/parser.rs
expression: "parse_expr(\"-ab\")"
---
(
    [
        Identifier {
            name: "ab",
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
        },
        ExprNode {
            expr: PrefixOp {
                op: PrefixOp {
                    prefix_type: Neg,
                    span: Span {
                        start: Pos(
                            0,
                        ),
                        end: Some(
                            Pos(
                                0,
                            ),
                        ),
                    },
                },
                right: ExprId(
                    1v1,
                ),
            },
            span: Span {
                start: Pos(
                    1,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
    ],
)
